[tool.poetry]
name = "turbo"
version = "0.1.0"
description = "Refactoring the turbo-telegram repo from REN-ISAC"
authors = ["Aditya Ramachandra <ar83@iu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.3" 
requests = "^2.32.2"
prettytable = "^3.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.1"
tox = "^4.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
turbo = "turbo.client:main"
